--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -15,5 +15,8 @@
 \begin{document}
 \maketitle
 Projektbeschreibung:\\
-Die Beschreibung
+Das Ergebniss soll einen kurzen Ueberblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben
+welcher bei dem Einsteckens eines USB Geraets ablaeuft, wie das Geraet identifiziert wird und welche 
+Angriffsvektoren BadUSB benutzt. Weiterhin soll gezeigt werden welche Schritte notwendig sind um ein
+BadUSB Geraet zu erzeugen.
 \end{document}
