--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -7,16 +7,16 @@
 
 %\usepackage[pdftex, colorlinks, linkcolor=blue, urlcolor=blue]{hyperref}
 
-\title{BadUSB - Eine Kurzuebersicht}
-\author{Michael Koch \and{Stephan Wendt} \and{Urs Oberdorf}\\Hochschule fuer Technik und Wirtschaft Saarland\\Fakultaet IngWi}
+\title{BadUSB - Eine Kurzübersicht}
+\author{Michael Koch \and{Stephan Wendt} \and{Urs Oberdorf}\\Hochschule für Technik und Wirtschaft Saarland\\Fakultät IngWi}
 %\institution{Hochschule fuer Technik und Wirtschaft Saarland}
 \date{} %Defaults to \today
 
 \begin{document}
 \maketitle
 Projektbeschreibung:\\
-Das Ergebniss soll einen kurzen Ueberblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben
-welcher bei dem Einsteckens eines USB Geraets ablaeuft, wie das Geraet identifiziert wird und welche 
+Das Ergebniss soll einen kurzen Überblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben,
+welcher beim Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
 Angriffsvektoren BadUSB benutzt. Weiterhin soll gezeigt werden welche Schritte notwendig sind um ein
-BadUSB Geraet zu erzeugen.
+BadUSB Gerät zu erzeugen.
 \end{document}
