--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -17,6 +17,6 @@
 Projektbeschreibung:\\
 Das Ergebnis soll einen kurzen Überblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben,
 welcher beim Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
-Angriffsvektoren BadUSB benutzt. Weiterhin soll gezeigt werden welche Schritte notwendig sind um ein
+Angriffsvektoren BadUSB nutzt. Des Weiteren soll gezeigt werden, welche Schritte notwendig sind um ein
 BadUSB Gerät zu erzeugen.
 \end{document}
