--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -16,7 +16,7 @@
 \maketitle
 Projektbeschreibung:\\
 Das Ergebnis soll einen kurzen Überblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben,
-welcher beim Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
+welcher bei dem Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
 Angriffsvektoren BadUSB nutzt. Des Weiteren soll gezeigt werden, welche Schritte notwendig sind um ein
 BadUSB Gerät zu erzeugen.
 \end{document}
