--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -18,5 +18,6 @@ Projektbeschreibung:\\
 Das Ergebnis soll einen kurzen Überblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben,
 welcher bei dem Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
 Angriffsvektoren BadUSB nutzt. Des Weiteren soll gezeigt werden, welche Schritte notwendig sind um ein
-BadUSB Gerät zu erzeugen.
+BadUSB Gerät zu erzeugen. 
+Ausserdem werden Abwehrmöglichkeiten und weitere Angriffsmethoden diskutiert.
 \end{document}
