--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -2,8 +2,8 @@
 
 \usepackage[ngerman]{babel}
 
-% Lol error?
-%\usepackage[utf8]{latin}
+\usepackage{times}
+\usepackage[utf8x]{inputenc}
 
 %\usepackage[pdftex, colorlinks, linkcolor=blue, urlcolor=blue]{hyperref}
 
@@ -17,7 +17,8 @@
 Projektbeschreibung:\\
 Das Ergebnis soll einen kurzen Überblick geben was BadUSB ist. Dazu wird grob der Prozess beschrieben,
 welcher bei dem Einstecken eines USB Geräts abläuft, wie das Gerät identifiziert wird und welche 
-Angriffsvektoren BadUSB nutzt. Des Weiteren soll gezeigt werden, welche Schritte notwendig sind um ein
-BadUSB Gerät zu erzeugen. 
-Ausserdem werden Abwehrmöglichkeiten und weitere Angriffsmethoden diskutiert.
+Angriffsvektoren BadUSB nutzt.\\
+Wir wollen feststellen, wie gut bzw. zuverlässig man in einer
+Standard-Betriebssystem-Installation einen BadUSB-Angriff mit forensischen
+Methoden entdecken kann.
 \end{document}
