erster entwurf der usb beschreibung

--- a/description/projectDescription.tex
+++ b/description/projectDescription.tex
@@ -1,9 +1,9 @@
 \documentclass[ a4paper, 12pt, ]{article}
 
-\usepackage[ngerman]{babel}
-
 % Lol error?
-%\usepackage[utf8]{latin}
+\usepackage[utf8]{inputenc}
+
+\usepackage[ngerman]{babel}
 
 %\usepackage[pdftex, colorlinks, linkcolor=blue, urlcolor=blue]{hyperref}
 
