--- a/report/usb.tex
+++ b/report/usb.tex
@@ -8,7 +8,14 @@ Im Fall des USB Standarts ist das der auf der Hauptplatine verbaute Host-Control
 Das bedeutet, dass ein per USB angeschlossenes Geraet nur dann Daten senden kann wenn es von dem Host-Controller abgefragt wird.
 
 Sobald an einen USB-Port ein Gerät angeschlossen wird, sendet der Host-Controller ein USB-Reset Signal an das Betreffende Gerät.
-Dieses wird dadurch gezwungen sich neu zu konfigurieren und seinen \textit{Device Descriptor} zu senden.
+Dieses wird dadurch aufgefordert sich neu zu konfigurieren und seinen \textit{Device Descriptor} zu senden.
 Dieser Deskriptor enthaelt Informationen ueber die Klasse des Geraets, also als welches Geraet es sich selbst anmelden moechte sowie welcher Treiber dafuer geladen werden soll.
 Fuer das senden dieses Deskriptors ist die Firmware auf dem Chip verantwortlich.
-Wenn diese manipuliert wurde kann sich das Geraet, z.B. ein USB-Stick, auch als Tastatur identifizieren und beginnen 
+Wenn diese manipuliert wurde kann sich das Geraet, z.B. ein USB-Stick, auch als
+Tastatur identifizieren und beginnen Eingabesignale zu senden wie eine normale
+Tastatur.
+Die Spezifikation ist ausserdem so ausgelegt, dass sich Geräte auch mit einem
+Interface Deskriptor anmelden können und somit zwei Geräte gleichzeitig sein
+können.
+Gewünscht ist dieser Fall bei z.B. Webcams welche sich als Audio aber auch Video
+Gerät anmelden.
