--- a/report/report.tex
+++ b/report/report.tex
@@ -50,17 +50,17 @@ twoside%,
 %\usepackage{expdlist}
 %\usepackage{enumerate} %%flexible (alphanumerische) Nummerierungen
 
-%\usepackage{listings} %% pretty printing of source code
-%
-%\lstset{
-%language=[ANSI]C,
-%basicstyle=\ttfamily,
-%keywordstyle=\color{green}\textbf,
-%stringstyle=\color{red},
-%commentstyle=\color{cyan}\textit,
-%tabsize=2,
-%tab=\rightarrowfill
-%}
+\usepackage{listings} %% pretty printing of source code
+
+\lstset{
+language=bash,
+basicstyle=\ttfamily,
+keywordstyle=\color{green}\textbf,
+stringstyle=\color{red},
+commentstyle=\color{cyan}\textit,
+tabsize=2,
+tab=\rightarrowfill
+}
 
 
 
@@ -102,7 +102,7 @@ twoside%,
 \end{itemize}
 
 
-
+\include{usb}
 
 \subsection{Abwehrmöglichkeit}
 \begin{itemize}
@@ -130,6 +130,7 @@ Ist es irgendwie feststellbar, dass es doch mal ein USB-Stick war, bevor die man
 	gesteuert wird.
 \end{itemize}
 
+\include{diffLinux}
 
 \subsection{Projektrichtung}
 \begin{itemize}
