--- a/report/report.tex
+++ b/report/report.tex
@@ -62,9 +62,10 @@ twoside%,
 %tab=\rightarrowfill
 %}
 
+\usepackage{graphicx}
 
 
-\title{Badusb}
+\title{\includegraphics[width=\linewidth]{../Graphics/htwsaar_Logo_inwi_head_VF_4C_crop}\\ BadUSB}
 \author{Michael Koch
 \thanks{pib.michael.koch@htw-saarland.de}
 \and{Urs Oberdorf}
@@ -83,6 +84,7 @@ twoside%,
 %\end{titlepage}
 
 \maketitle
+%\includegraphics[width=\linewidth]{../Graphics/htwsaar_Logo_inwi_head_VF_4C_crop}
 
 %\underline{text} %%Unterstrichener Text
 
@@ -99,6 +101,9 @@ twoside%,
 \item gefälschter Netzwerkadapter mit DHCP-Server
 \item FTP-Server
 \item alles verfälschen, was auf dem Stick gespeichert werden soll - Abwehr: Stick komplett mit Truecrypt/LUKS verschlüsseln
+\item versteckte Partition
+\item Android-Phone mit noch erweiterten Möglichkeiten (z.B. der komplette
+	Netzwerktraffic läuft über das Android-Phone
 \end{itemize}
 
 
