cleaned presentation  from netbeans content

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -173,146 +173,8 @@ tab=\rightarrowfill
 \end{frame}
 
 %-------------------------------------------------------------------- Frame --
-\begin{frame}{Netbeans}{Einleitung}
-	Unterstützte Sprachen:
-	\bigskip
+\begin{frame}{BadUSB}{Einleitung}
 	\begin{itemize}
-		\item HTML, JavaScript, CSS
-			\pause
-		\item Java, C, C++, Fortran, PHP, etc.
-			\pause
-		\item beliebige weitere über Plugins
 	\end{itemize}
 \end{frame}
-
-%-------------------------------------------------------------------- Frame --
-\begin{frame}{Netbeans}{Einleitung}
-	Funktionsumfang u.a.:
-	\begin{itemize}
-		\item Quellcode editieren:\\
-			Syntax highlighting, intelligente Code-Vervollständigung,
-			Refactoring, Code-Skeletons, Navigieren zwischen
-			Sprachelementen etc.
-			\pause
-		\item Projekt kompilieren\\
-			mit allen Abhängigkeiten, Maven etc.
-			\pause
-		\item Projekt laufen lassen
-			\pause
-		\item Projekt debuggen
-			\pause
-		\item Projekt testen
-	\end{itemize}
-\end{frame}
-
-%-------------------------------------------------------------------- Frame --
-\begin{frame}{Netbeans}{Installation}
-	\begin{itemize}
-		\item Für HTML und JavaScript-Unterstützung mindestens Version 7.3
-			\pause
-		\item In Debian- und Ubuntu-Repositories nur Version 7.0.1
-			\pause
-		\item Benötigt mindestens JDK 7
-			\pause
-		\item Download unter\\
-			\href{https://netbeans.org/downloads/}{https://netbeans.org/downloads/}\\
-			bzw. inklusive JDK unter\\
-			\href{http://www.oracle.com/technetwork/java/javase/downloads/jdk-netbeans-jsp-142931.html}{http://www.oracle.com/technetwork/java/javase/downloads/jdk-netbeans-jsp-142931.html}
-			\pause
-		\item Installer unter Linux und Windows ungefähr gleich intuitiv benutzbar
-	\end{itemize}
-\end{frame}
-
-%-------------------------------------------------------------------- Frame --
-\begin{frame}{Netbeans}{Web-Projekt entwickeln}
-	Netbeans-Extension für den Webbrowser Chrome installieren:\\
-	\href{https://chrome.google.com/webstore/search/netbeans}{https://chrome.google.com/webstore/search/netbeans} -> "NetBeans Connector"
-\end{frame}
-
-%-------------------------------------------------------------------- Frame --
-\begin{frame}{Netbeans}{Web-Projekt entwickeln}
-	\begin{itemize}
-		\item File -> New Project -> Categories: HTML5 -> Projects: HTML5 Application -> Next\\
-		\item Projektname und Projektpfade wählen -> Next\\
-		\item Templates wählen -> Next\\
-		\item JavaScript-Bibliotheken einbinden\\
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Netbeans}{Web-Projekt entwickeln}
-	%%TODO: Screenshot
-\end{frame}
-
-\begin{frame}{Netbeans}{Web-Projekt entwickeln}
-	\begin{itemize}
-		\item Code editieren im Source Editor-Fenster
-			(wenn Code-Vervollständigung nicht automatisch erscheint,
-			mit Tastenkombination Ctrl-Spacebar aufrufen)
-			\pause
-		\item Im Code navigieren im Navigator-Fenster
-			\pause
-		\item Dateien (CSS, JavaScript, Bilder, etc.) dem Projekt hinzufügen im Projects-Fenster
-			\pause
-		\item Run -> Run Project: Projekt ausführen und im Browser anzeigen
-			lassen
-	\end{itemize}
-\end{frame}
-
-
-
-\begin{frame}{Netbeans}{Web-Projekt debuggen}
-	\begin{itemize}
-		\item In JavaScript-Dateien können am linken Rand im Code-Editor (bei den
-			Zeilennummern) Breakpoints gesetzt werden\\
-		\item Ausführung des Projekts stoppt am Breakpoint\\
-		\item Variablen-Inhalte können dann über Tooltips der Variablen im Code oder
-			im Variablen-Fenster angesehen werden\\
-		\item Code-Abschnitte können markiert werden und über Debug -> Evaluate
-			Expression ausgeführt werden\\
-		\item (Window -> Debugging -> Breakpoints)\\
-			(Window -> Debugging -> Variables)\\
-			...
-	\end{itemize}
-\end{frame}
-
-
-\begin{frame}{Netbeans}{Unit-Tests}
-	\begin{itemize}
-		\item JsTestDriver-1.3.5.jar von\\
-			\href{https://code.google.com/p/js-test-driver/downloads/list}{https://code.google.com/p/js-test-driver/downloads/list}\\
-			downloaden\\
-		\item Window -> Services -> JS Test Driver -> Configure\\
-		\item JsTestDriver JAR: heruntergeladene JAR-Datei\\
-			Browsers to use for testing:\\
-			Chrome with Netbeans Connector
-	\end{itemize}
-\end{frame}
-
-
-\begin{frame}{Netbeans}{Unit-Tests}
-	\begin{itemize}
-		\item Rechtsklick auf das Projekt -> New -> Other...\\
-		\item Categories: Unit Tests -> File Types: jsTestDriver Configuration File -> Next\\
-		\item Finish\\
-		\item In der nun geöffneten jsTestDriver.conf Datei können unter \texttt{load:}
-			die Unit-Test-Dateien und die zu testenden Dateien eingetragen werden\\
-		\item Rechtsklick auf das Projekt -> Test, um die Tests zu starten
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Netbeans}{Refactoring}
-	Über Menü \textit{Refactor}
-\end{frame}
-
-\begin{frame}{Netbeans}{Versionsverwaltung}
-	Team -> Git -> Clone...\\
-	Repository URL:, User: und Password: eingeben
-\end{frame}
-
-\begin{frame}{Ende}
-	\begin{center}
-		\Large{Fragen?}
-	\end{center}
-\end{frame}
-
 \end{document}
