--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -161,20 +161,61 @@ tab=\rightarrowfill
 %-------------------------------------------------------------------- Frame --
 \begin{frame}{BadUSB}{Einleitung}
 	\begin{itemize}
-		\item \glqq Integrierte Entwicklungsumgebung\grqq (\textbf{I}ntegrated \textbf{D}evelopment
-			\textbf{E}nvironment)
-			\pause
-		\item Vollständig in Java implementiert
-			\pause
-		\item Weitgehend plattformunabhängig
-			\pause
-		\item Modular fast beliebig erweiterbar
+		\item Entwurf in den 90ern
+        \item bietet hohe Anschluss-Flexibilität bei Peripheriegeräten
+        \item Bus-System
+        \item Host-Controller kontrolliert Kommunikation
 	\end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------- Frame --
-\begin{frame}{BadUSB}{Einleitung}
+\begin{frame}{BadUSB}{Anschluss eines Geräts}
 	\begin{itemize}
+        \item Reset
+        \item Device Descriptor
+        \item Interface Descriptor
 	\end{itemize}
 \end{frame}
+%%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Live Demonstration}
+	\begin{itemize}
+        \item Live Demonstration
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Vorgehensweise}
+    Testumgebung
+	\begin{itemize}
+        \item Notebook mit Windows 7
+        \item HP Proliant DL380 G5, 2x Xeon Quadcore, 16GB RAM
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Analyse}
+    Drei Images (base, hello, ftp)
+	\begin{itemize}
+        \item Timeline
+        \item MD5 Hashes der Dateien 
+        \item Differenzen
+        \item Windows Logfiles
+        \item setupapi.dev.log
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Fazit}
+    \begin{centering}
+        Fazit
+    \end{centering}
+\end{frame}
+
+%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Ausblick}
+    \begin{itemize}
+        \item Abwehrmöglichkeiten
+    \end{itemize}
+\end{frame}
+
+
+
+
 \end{document}
