Ende frame added

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -215,6 +215,12 @@ tab=\rightarrowfill
     \end{itemize}
 \end{frame}
 
+%-------------------------------------------------------------------- Frame --
+\begin{frame}{BadUSB}{Ende}
+    Vielen Dank für Ihre Aufmerksamkeit
+\end{frame}
+
+
 
 
 
